Changelog
=========

1.6.1 (unreleased)


1.6.0 (2010-02-24)

- Fix a regression from hiding read-only fields from the UI -- createable
  fields still need to be an option even if they aren't updateable. This
  closes http://plone.org/products/salesforcepfgadapter/issues/17
  [davisagli]

- Code defensively so that the SFPFG adapter modified handler doesn't fail
  when encountering adapter subclasses that don't have a 'creationMode' field.
  [davisagli]

1.6b2 (2009-12-11)

- Don't show read-only fields as options in the field mapping UI. This closes
  issue #14.
  [davisagli]

- Remove obsolete actions from the type configuration. This closes issue #16.
  [davisagli]

- Allow mapping the filename and mimetype of file uploads to fields in SFDC
  (probably on an Attachment object) in addition to the data itself.
  [davisagli]

- Added ability to view and update values from existing Salesforce objects,
  found by matching an arbitrary expression.  See the README for details.
  [davisagli]

- Restored Plone 2.5 support and added compatibility with Plone 4.
  [davisagli]

- Added a 'Preset field values' setting so that hardcoded values can be mapped
  to Salesforce fields without having to create a hidden form field. Thanks to
  Jon Stahl for the suggestion.
  [davisagli]

1.6b1 (2009-09-08)

- Adjust calls to the salesforcebaseconnector query method to use a single
  full SOQL statement.  beatbox >= 16.0dev is now required.
  [davisagli]

- Use the field id instead of title as the key column for the field mapping,
  so that it's possible to set the mapping programmatically without worrying
  about the titles.
  [davisagli]

- Cut out duplicate setup code and unnecessary API calls throughout testing
  with use of onsetup decorator.
  [andrewb]

- Move substantial portions of package installation to GenericSetup.
  [andrewb]

- No longer supporting Plone 2.5, pull out all the complex workarounds 
  associated with support older version.
  [andrewb]
